posix2: Fix Makefile to include newer posix sources
Tests were failing as the symbol posix_get_mdata_xattr was
missing, which comes from newer sources added in posix xlator
for the ctime feature.

The required files are added, and tested riocreate locally to
ensure it does not have any other failures.

Updates: #243
Change-Id: Ibb06c37232a5d35f0cfc2404ff8dd50a7bd1fcdf
Signed-off-by: ShyamsundarR <srangana@redhat.com>

--- a/xlators/experimental/posix2/common/src/Makefile.am
+++ b/xlators/experimental/posix2/common/src/Makefile.am
@@ -11,6 +11,7 @@ posix_sources += $(POSIX_SRC)/posix-handle.c
 posix_sources += $(POSIX_SRC)/posix-aio.c
 posix_sources += $(POSIX_SRC)/posix-gfid-path.c
 posix_sources += $(POSIX_SRC)/posix-inode-fd-ops.c
+posix_sources += $(POSIX_SRC)/posix-metadata.c
 
 noinst_HEADERS = $(POSIX2_PREFIX)/posix2-inode-handle.h \
                  $(POSIX2_PREFIX)/posix2-helpers.h \
@@ -20,7 +21,9 @@ noinst_HEADERS = $(POSIX2_PREFIX)/posix2-inode-handle.h \
                  $(POSIX_BLD)/posix-messages.h \
                  $(POSIX_BLD)/posix-gfid-path.h \
                  $(POSIX_BLD)/posix.h \
-                 $(POSIX_BLD)/posix-inode-handle.h
+                 $(POSIX_BLD)/posix-inode-handle.h \
+                 $(POSIX_BLD)/posix-metadata.h \
+                 $(POSIX_BLD)/posix-metadata-disk.h
 
 libposix2common_la_SOURCES = posix2-helpers.c $(posix_sources)
 
